Fix title spacing

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -22,6 +22,7 @@ h2.book-brand{
     }
 
     span{
+        padding-top: 1rem;
         display: block;
     }
 }
